zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/duplicate_boolean_switch_value.zig
comptime {
    const x = switch (true) {
        true => false,
        false => true,
        true => false,
    };
    _ = x;
}
comptime {
    const x = switch (true) {
        false => true,
        true => false,
        false => true,
    };
    _ = x;
}

// error
//
// :5:9: error: duplicate switch value
// :3:9: note: previous value here
// :13:9: error: duplicate switch value
// :11:9: note: previous value here
